# project_rz

./: .gitignore  CMakeLists.txt  backup_post_buildVS_command.txt  build_command.txt  build_win64.bat  post_build_command.bat
src/: 3d_utils.cpp  3d_utils.h  FrameData.h  ImageSequence.cpp  ImageSequence.h  LiveWindow.cpp  LiveWindow.h  Timeline.cpp  Timeline.h  UIWindow.cpp  UIWindow.h  aaa.cpp  core.h  gui2oneFaceDetector.cpp  gui2oneFaceDetector.h  gui2oneFeaturesDetect.cpp  gui2oneFeaturesDetect.h  main.cpp  my_widget.cpp  my_widget.h  opengl_debug.h  pch.h  trackoo_core.cpp  trackoo_core.h
src/core/: camera.cpp  camera.h  entity3d.cpp  entity3d.h  mesh_object.cpp  mesh_object.h  polyline_object.cpp  polyline_object.h  scene_background.cpp  scene_background.h  shader.cpp  shader.h  texture.cpp  texture.h  timer.cpp  timer.h
src/res/shaders/: basic_shader.vert  font_shader.frag  font_shader.vert  planet_shader.frag  planet_shader.vert  scene_background_shader.frag  scene_background_shader.vert  screen_shader.frag  screen_shader.vert
